# MediLens

./: .env.example  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
docs/: eval-label-review-v1.md  how-it-works.md  policy-authoring.md  policy-schema.md
src/medilens/: cli.py  config.py  date_resolution.py  hashing.py  ingestion.py
src/medilens/audit/: writer.py
src/medilens/client/: anthropic_client.py  rate_limiter.py  retry.py
src/medilens/db/: models.py  session.py
src/medilens/eval/: README.md  __init__.py  dataset.py  metrics.py  runner.py
src/medilens/eval/cases/: ortho_pain_v1.yaml
src/medilens/eval/notes/: hip_injection_supported.txt  (+11 more)
src/medilens/knowledge/: ingest.py  retrieval.py
src/medilens/notes/: ingest.py
src/medilens/phi/: screening.py
src/medilens/policy/: ingest.py  lint.py  retrieval.py  rules.py  structure.py
src/medilens/prompts/: validation_v1.txt  validation_v2.txt  validation_v3.txt
src/medilens/reasoning/: coverage.py  pipeline.py  prompts.py  schema.py  verification.py
src/medilens/ui/: app.py  design.py  recommendation_view.py
tests/: test_app_form_options.py  test_audit.py  test_cli.py  test_config.py  test_coverage.py  test_design.py  test_eval.py  test_hashing.py  test_ingestion.py  test_knowledge.py  test_model_client.py  test_note_ingest.py  test_phi_screening.py  test_policy.py  test_rate_limiter.py  test_reasoning.py  test_recommendation_view.py  test_retry.py  test_rules.py
tests/fixtures/synthetic_notes/: epic_style_lumbar_mri.txt  esi_case_commercial.txt  lumbar_mri_example.txt
(+2 files in other folders)
